--- a/index.html
+++ b/index.html
@@ -107,7 +107,20 @@ style="width:100%; border-radius:5px;">
 <tr>
 <th>
 <h3>
-<img src="glavnyi_ekran.jpg"> 
+<a href="pages/velikie_gonshiki.html">
+
+
+
+<span style="margin-left:5px;">Величайшие гонщики</span></a>
+
+
+<a href="pages/velikie_bolidy.html">
+
+<span style="margin-left:5px;">Величайшие болиды</span;></a>
+
+<a href="">
+
+<span style="margin-left:5px;">Величайшие команды</span></a>
 </h3>
 </th>
 </tr>
